# mapping-experiments

./: .gitignore  README.md
code/: CMakeLists.txt  compare_trajectory_frametoframe_velo_cam.cpp  compare_trajectory_velo_cam.cpp  keypoint_compare.cpp  keypoint_compare.h  kpq_3d.cpp  kpq_3d.h  kpq_3d.hpp  kpq_as_3d.cpp  kpq_as_3d.h  kpq_as_3d.hpp  load_point_cloud.h  load_stereo_cam.cpp  load_stereo_cam.h  load_velodyne.cpp  load_velodyne.h  match_velo_cam.cpp  match_velo_cam_gicp.cpp  match_velo_cam_harris.cpp  match_velo_cam_harris_gicp.cpp  match_velo_cam_iss.cpp  match_velo_cam_kpq.cpp  match_velo_frames.cpp  match_velo_harris_frames.cpp  match_velo_harris_gicp.cpp  match_velo_narf_frames.cpp  octo_model.cpp  octo_model.h  octomap_icp.cpp  octomap_narf.cpp  proc_stereo_cam.cpp  proc_velodyne.cpp  range_image_visualization.cpp
matlab/: proc_harris_keypts.m  proc_iss_keypts.m  proc_narf_features.m
